# Wayabot-vz

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.simple.yml  docker-compose.yml  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  run.sh  setup.sh  vercel.json
app/: layout.tsx  page.tsx
backend/: agent_engine.py  ai_engine.py  animations.py  bot_builder.py  bot_runtime.py  cognitive_engine.py  config.py  content_scheduler.py  database.py  emotion_engine.py  handlers.py  intelligence_core.py  learning_engine.py  main.py  memory_engine.py  moderation.py  proactive_engine.py  pyproject.toml  requirements.txt  scheduler.py  suggestions.py  telegram_api.py  telegram_effects.py  tools_engine.py  voice_engine.py
components/: bot-builder.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  templates-section.tsx
scripts/: 002_add_intelligence_tables.sql  add_bot_features.sql  add_managed_bots.sql
styles/: globals.css
